2013-08-28  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/api/ipmi-api.h: Document mapping of
	IPMI completion codes and RMCPPlus codes to API error codes.

	* Update freeipmi libraries/tools to check/use API error codes
	correctly.
	
2013-08-27  Albert Chu <chu11@llnl.gov>

	Merge branch configcollapse.

	* ipmi-config/: New tool.

	* bmc-config/, ipmi-pef-config/, ipmi-sensors-config/,
	ipmi-chassis-config/: Remove tools.

	* common/configtool/: Remove common files. 

	* common/toolcommon/: Update config file parsing to recognize
	ipmi-config and legacy options.

	* doc/, man/: Update documentation appropriately for change.
	
2013-08-22  Albert Chu <chu11@llnl.gov>

	* configure.ac, NEWS: Update for release.

2013-08-13  Albert Chu <chu11@llnl.gov>

	* man/bmc-config.conf.5.pre.in: Fix section typos.

	* man/libfreeipmi.3.pre.in, man/freeipmi.7.pre.in,
	man/freeipmi.conf.5.pre.in: Add missing tool.
	
2013-08-09  Albert Chu <chu11@llnl.gov>

	* doc/: Update all docs w/ dates.
	
2013-08-02  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sdr/ipmi-sdr-parse-util.c (ipmi_sdr_parse_entity_sensor_name):
	Handle special corner case w/ double printed name.

2013-07-03  John Gilmore <gnu@toad.com>

	* Fix compiler issues w/ gcc-2.96.

2013-07-03  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/ipmi-sensors-output-common.c (ipmi_sensors_get_thresholds):
	When thresholds access reported by SDR is fixed/unreadable, the
	prior interpretation was that thresholds were not available.  The
	apparent correct interpretation is that thresholds are only
	unreadable via the get threshold command, but thresholds can still
	be read in the SDR.  Code has been altered to meet this
	assumption.  Issue discovered and proper interpretation determined
	by Holger Liebig <holger.liebig@ts.fujitsu.com>.

2013-06-26  Mario Jungwirth <mario.jungwirth@ocilion.com>

	* libipmimonitoring/ipmi_monitoring.h.in: Remove invalid declaration. 
	
2013-06-25  Albert Chu <chu11@llnl.gov>
