@@ -668,8 +668,6 @@ struct ipmi_oem_command oem_intelnm[] =
       IPMI_OEM_COMMAND_FLAGS_DEFAULT,
       ipmi_oem_intelnm_set_node_manager_power_draw_range
     },
-#if 0
-    /* can't verify */
     {
       "get-node-manager-alert-destination",
       NULL,
@@ -684,7 +682,6 @@ struct ipmi_oem_command oem_intelnm[] =
       IPMI_OEM_COMMAND_FLAGS_OPTIONS_COUNT_VARIABLE,
       ipmi_oem_intelnm_set_node_manager_alert_destination
     },
-#endif
     {
       "get-node-manager-version",
       NULL,
